2008-07-27  P. Henrique Silva  <henrique@astro.ufsc.br>

	*** chimera-new-scripts branch ***

	* src/chimera/core/cli.py: Much better implementation of
	_getObjects method. Working with most configurations of
	local/remote instrument/driver. Needs test cases for promotion to
	stable branch.

	* .project:
	* .pydevproject: updated to branch project.

	* src/chimera/core/chimera.config.sample
	* src/chimera/core/chimera.sample.config: Rename.
	* src/chimera/core/constants.py: Updated for above rename.

	* src/chimera/core/classloader.py: Accepts string paths.
	* src/chimera/core/manager.py: Add exception handling on daemon
	start.
	* src/chimera/core/systemconfig.py: Hack! need better
	implementation of multiple yaml files handling (location creation
	versus host/port config)
	* src/chimera/instruments/dome.py: less verbose dome.


2008-07-10  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/core/path.py: New way to get Chimera paths. Use
	pkg_resources to get correct installation place or just guess.

	* src/scripts/chimera-focus:
	* src/scripts/chimera-cam:
	* src/scripts/chimera-dome:
	* src/scripts/chimera-tel:
	* src/chimera/controllers/site/main.py: All modified to use ChimeraPath.

	* setup.cfg:
	* setup.py: No more zip_safe. Eggs crash classloader. Not
	installing as egg anymore.

2008-06-10  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/interfaces/cameradriver.py: Fix typos.

	* src/chimera/controllers/site/main.py: Broad exception handling.

	* src/chimera/core/manager.py: More exception handling.

	* src/chimera/instruments/camera.py: There was a BIG bug here. In
	the finally statement, we were returning a tuple, and according to
	Python's manual, in a finally, if we break or return, we loose the
	exception!!! The result was that any exception occuring in
	drv.expose was silently ingored!!!


2008-06-07  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/drivers/fakecamera.py: Fixes on random number